summit/css/general-summit-landing-page.css
/* ... */
.collapse.in {
    position: relative;
    display: inline-block;
}

.text-wrapper.blue {
    position: absolute;
    bottom: 0;
    width: 100%;
    background-color: #00468b;

    /*margin: 0;*/
}

.text-wrapper.blue .highlight {
    max-width: 870px;
    margin: 0 auto;
    position: relative;
}

@media all and (max-width: 815px) {
    .text-wrapper.blue .highlight {
        max-width: 100%;
        height: auto;
        padding: 1em;
    }

    .text-wrapper.blue .highlight h5 {
        padding: 0;
        line-height: 1.4em;
    }

    .text-wrapper.blue .megaphone {
        display: none;
    }
}

.text-wrapper.blue h5 {
    color: #fff;
    padding-left: 5em;
    padding-bottom: 2em;
    padding-top: 0.75em;
    text-align: center;
}

.text-wrapper.blue h5 strong {
    color: #ffd602;
}

.text-wrapper.blue .megaphone {
    background: url("../images/megaphone.svg") center no-repeat;
    width: 10em;
    height: 10em;
    position: absolute;
    top: -4em;
    left: 0;
}

.about-summit-header {
    background: #ed1944 url("/assets/summits/denver-2019/Denver-Mountain-BG.svg") center bottom no-repeat;
    color: #fff;
    min-height: 80vh;
    padding-top: 7em;
}

.about-summit-header .about-buttons {
    display: inline-block;
}

.about-summit-header .summit-title {
    color: #ffd602;
    font-size: 4em;
    margin: 0 0 0.5em 0;
}

.about-summit-header h2 {
    font-size: 4em;
    color: #fff;
    margin-top: 0;
}

@media all and (max-width: 450px) {
    .about-summit-header h2 {
        font-size: 3em;
        word-wrap: break-word;
    }

    .about-summit-header .summit-title {
        font-size: 2em;
    }

    .about-summit-header {
        padding-top: 4em;
    }
}

@media all and (min-width: 1200px) {
    .about-summit-header h2 {
        font-size: 85px;
    }
}

@media (min-width: 500px) and (max-width: 676px) {
    .about-summit-header h2 {
        font-size: 3.2em;
    }

    .about-summit-header .summit-title {
        font-size: 2.2em;
    }
}

@media (min-width: 677px) and (max-width: 991px) {
    .about-summit-header h2 {
        font-size: 3.4em;
    }

    .about-summit-header .summit-title {
        font-size: 2.4em;
    }
}

.about-summit-header .about-buttons .btn {
    letter-spacing: 0.025em;
    text-transform: uppercase;
    font-weight: normal;
    position: relative;
    margin-top: 1em;
    border: none;
}

@media (min-width: 500px) and (max-width: 1024px) {
    .about-summit-header .about-buttons .btn {
        width: 46%;
        float: left;
        font-size: 0.99em;
    }

    .about-summit-header .about-buttons .btn:first-child {
        margin-right: 3%;
    }

    .about-summit-header .about-buttons .btn:last-child {
        margin-left: 3%;
    }
}

.about-summit-header .about-buttons .btn i {
    float: right;
    margin-top: 0.2em;
}

.about-summit-header .about-buttons .btn-default {
    background-color: #fff;
    color: #00468b !important;
}

.about-summit-header .about-buttons .btn-primary {
    background-color: #ffd602;
    color: #00468b !important;
}

.about-summit-header .session-box h3 {
    text-align: center;
    color: #fff;
    margin: 3em 0 1.5em 0;
}

.about-summit-header .bird {
    width: 100%;
    display: inline-block;
}

.about-summit-header h5 {
    padding-left: 1em;
    color: #fff;
    float: left;
}

.about-summit-header .bird span {
    background: url("../images/bird.svg") center no-repeat;
    display: inline-block;
    width: 3em;
    height: 3em;
    float: left;
}

.about-summit-header .bird strong {
    color: #ffd602;
    margin-top: 0.5em;
    display: inline-block;
}

.sessions {
    padding: 0;
    margin: 0;
}

.session {
    display: inline-block;
    color: #fff;
    text-align: center;
    max-width: 10.5%;
    min-width: 10.5%;
    margin-top: 2em;
    float: left;
}

@media all and (max-width: 767px) {
    .session {
        max-width: 25%;
        min-width: 25%;
    }
}

.session span {
    width: 100%;
    min-height: 4em;
    height: auto;
    display: inline-block;
    margin-bottom: 10px;
}

.session span.ai {
    background: url("../images/ai.svg") center center no-repeat;
}

.session span.cicd {
    background: url("../images/cicd.svg") center center no-repeat;
}

.session span.container {
    background: url("../images/container.svg") center center no-repeat;
}

.session span.edge {
    background: url("../images/edge.svg") center center no-repeat;
}

.session span.hpc {
    background: url("../images/hpc.svg") center center no-repeat;
}

.session span.hybrid {
    background: url("../images/hybrid.svg") center center no-repeat;
}

.session span.nfv {
    background: url("../images/nfv.svg") center center no-repeat;
}

.session span.cloud {
    background: url("../images/cloud.svg") center center no-repeat;
}

.session span.security {
    background: url("../images/security.svg") center center no-repeat;
}

.what-to-expect {
    padding: 4em 0;
}

.what-to-expect .row {
    margin: 0;
}

/* .what-to-expect .video-container, .what-to-expect .text-container {
    width: 50%;
    display: inline-block;
    float: left;

    @media (max-width: 1024px) {
        width: 100%;
    }
} */

.what-to-expect .video-container {
    margin-bottom: 3em;
}

.what-to-expect .video-container .video {
    background: url("../images/thumb_video.jpg") center top no-repeat;
    background-size: cover;
    width: 100%;
    height: 20em;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;
    font-size: inherit;
}

.what-to-expect .text-container .attends {
    padding: 0;
    margin: 1em 0 0 0;
}

.what-to-expect .text-container .attends li {
    display: inline-block;
    width: 25%;
    float: left;
    max-width: 25%;
    text-align: center;
    color: #ed1944;
}

.what-to-expect .text-container .attends li span {
    background: center top no-repeat;
    width: 100%;
    height: 4em;
    display: inline-block;
    margin: 1em 0;
    background-size: contain;
}
/* ... */

